Fix vertical alignment in document links

--- a/css/default.css
+++ b/css/default.css
@@ -154,6 +154,9 @@ main .document-links a {
 	background: #eee;
 	padding: 8px 16px;
 	flex: 1;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 @media (min-width: 600px) {
